Fix a broken link in index.html of cyrillic lesson

--- a/cyrillic/lesson/index.html
+++ b/cyrillic/lesson/index.html
@@ -13,7 +13,7 @@
         <li><a href="./lesson-2.html">Lesson 2</a></li>
     </ul>
     <hr>
-    <a href="/index.html">Back to Home</a>
+    <a href="../../index.html">Back to Home</a>
     <a href="../index.html">Back to Cyrillic</a>
 </body>
 </html>
