First version of the website

--- a/cyrillic/index.html
+++ b/cyrillic/index.html
@@ -3,16 +3,40 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cyrillic</title>
+    <link rel="stylesheet" href="../style.css">
+    <link rel="icon" type="image/png" href="../assets/clay_cuneiform.png">
+    <title>一塊小泥板</title>
 </head>
 <body>
-    <h1>Script System 1</h1>
-    <p>Introduction to this script...</p>
-    <h2>Lessons</h2>
-    <ul>
-        <li><a href="lesson/index.html">Visit the lessons</a></li>
-    </ul>
-    <hr>
-    <a href="../index.html">Back to Home</a>
+    <main>
+        <h1>基里爾字母系統 (Cyrillic scripts)</h1>
+        <p>基里爾字母最早是為了書寫斯拉夫語系語言，於 9 世紀末的保加利亞被發明。至 10 世紀晚期，基里爾字母在保加利亞、塞爾維亞與基輔羅斯都能發現使用案例。20 世紀，受到蘇聯政權的影響，部分非斯拉夫語系的語言也開始使用基里爾字母。</p>
+        <p>目前使用基里爾字母，且為斯拉夫語系的語言有 : 俄語、白羅斯語 (Belarusian)、烏克蘭語、保加利亞語、塞爾維亞-克羅埃西亞語 (Serbo-Croatian / 該語言也被羅馬字母拼寫)、馬其頓語 (Macedonian)。</p>
+        <p>曾使用或仍使用基里爾字母，但不是斯拉夫語系的語言有 : 摩爾多瓦語 (Moldovan)、塔吉克語 (Tajik)、科米語 (Komi)、亞塞拜然語 (Azeri)、土庫曼語 (Turkmen)、韃靼語 (Tatar)、哈薩克語、烏茲別克語、吉爾吉斯語 (Kirghiz)、阿布哈茲語 (Abkhaz)、卡巴爾達語 (Kabardian)、阿瓦爾語 (Avar)、楚科奇語 (Chukchee)。</p>
+        <figure>
+            <img src="../assets/picture/Cyrillic_alphabet_world_distribution.svg"></img>
+            <figcaption>基里爾字母系統主要使用區域示意圖</figcaption>   
+        </figure>
+        <h2>本頁面參考資料</h2>
+        <ul>
+            <li>The World's Writing Systems (1996), Section 60 Adaptations of the Cyrillic Alphabet. Bernard Comrie (author of the section), Peter T. Daniels, William Bright (editors of the book). Oxford.
+                <ul>
+                    <li>和基里爾字母有關的語言參考自本書。俄羅斯本土內有不少原住民族也使用基里爾字母，我在上面列舉的例子中可能仍有缺漏的地方。如果有讀者想到任何例子，希望我日後能補充上去，歡迎聯繫小泥板粉專!</li>
+                </ul>
+            </li>
+        </ul>
+        
+        <div class="card-container">
+            <a href="russian/index.html" class="image-card">
+                <img src="../assets/cover/russian-edited.jpg" alt="Linguistics">
+                <div class="card-text">俄語基里爾字母</div>
+            </a>
+            <a href="bulgarian/index.html" class="image-card">
+                <img src="../assets/cover/bulgarian-edited.jpg" alt="Linguistics">
+                <div class="card-text">保加利亞語基里爾字母</div>
+            </a>
+        </div>
+        <a href="../index.html" class="button">回到首頁 / 書寫系統列表</a>
+    </main>
 </body>
 </html>
