--- a/index.html
+++ b/index.html
@@ -3,14 +3,38 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mudboard</title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="icon" type="image/png" href="assets/clay_cuneiform.png">
+    <title>一塊小泥板</title>
 </head>
 <body>
-    <h1>Welcome to Your Mudboard!!</h1>
-    <ul>
-        <li><a href="linguistic-knowledge/index.html">Linguistic Knowledge</a></li>
-        <li><a href="cyrillic/index.html">cyrillic</a></li>
-        <li><a href="glogolitic/index.html">glagolitic</a></li>
-    </ul>
+    <div class="hero-banner">
+        <div class="banner-content">
+            <h1>歡迎來一塊小泥板</h1>
+            <p>探索語言與文字的歷史</p>
+        </div>
+    </div>
+    <main>
+        <div class="card-container">
+            <a href="cyrillic/index.html" class="image-card">
+                <img src="assets/cover/cyrillic-cover.jpg" alt="Cyrillic Script">
+                <div class="card-text">基里爾字母系統 (Cyrillic writings)</div>
+            </a>
+            <a href="glogolitic/index.html" class="image-card">
+                <img src="assets/cover/glagolitic-cover.jpg" alt="Cyrillic Script">
+                <div class="card-text">格拉哥里字母系統 (Glogolitic writings)</div>
+            </a>
+        </div>
+        
+        <div class="social-container">
+            <a href="https://www.instagram.com/yikuaimudboard/" target="_blank">
+                <img src="assets/picture/insta-logo.png" alt="Instagram" class="social-icon">
+            </a>
+            <a href="https://www.threads.com/@yikuaimudboard" target="_blank">
+                <img src="assets/picture/thread-logo.png" alt="Threads" class="social-icon">
+            </a>
+        </div>
+        <p class="copyright">&copy; 2025 一塊小泥板. All rights reserved.</p>
+    </main>
 </body>
 </html>
